                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2019-04-26
 * Added a session id conflict check for better security auditing.

2019-04-15
 * Do not die in sending email jobs.  Just delete the job.

2019-04-09
 * Add additional debug for email problems.
 * Remove real_name/display_name from mkits due to unsafe characters.

2019-03-06
 * Increased the timeout of secondary auth to 30 minutes.
 * Made a better secondary auth email template.
 * Made secondary auth not get into an infinite loop.

2019-02-25
 * Added option to wing.object.save() in wing.vue.js.
 * Added wing-select-new directive to wing.vue.js.

2019-02-12
 * Added get_field_options() and format_field_options() to wing.vue.js.
 * Added format_objects_as_field_options() to object_list in wing.vue.js.

2019-02-05
 * Modified S3Image to allow verification of an image outside of the handle upload method.
 * Added the append() method to wing.object_list in wing.vue.js.
 * Added custom-select class to wing-select in wing.vue.js to bring it inline with the formatting for bootstrap-vue.

2019-02-04
 * Modified S3Image to allow for images not attached to other objects by passing '-none-' into image_relationship_name.

2019-01-28
 * Fix a long standing bug with false logging of email errors.

2018-11-26
 * Fix trends delta roll up calculation.
 * Add --target option to wing trends command line.

2018-11-25
 * Added Wing::Instrument to make it easier to profile Wing.

2018-10-18
 * Trends deltas now take an average over time rather than having last write be the value for daily, monthly, yearly. This means delta trends won't have perfect accuracy for a while.
 * Trends don't log if value eq undef

2018-09-30
 * Bunch of chat bug fixes.
 * Added /badge and /badge-color commands to chat.