@@ -33,6 +33,7 @@
 #	"namespace" : "PROJECTSITE",
 #	"db_driver" : { "prefix" : "DBI:mysql:database=", "suffix" : ""}
 #    },
+    # "cachelog" : "log",
     "log4perl_config" : "/data/PROJECT/etc/log4perl.conf",
     #"dbic_trace" : "/tmp/dbic.trace.out",
     "rpc_limit" : 30,
