@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-04-27
+ * Added cachelog subsystem. To use add "cachelog" : "log" to your config, or see Wing::Role::Result::CacheLog for a database log.
+
 2019-04-26
  * Added a session id conflict check for better security auditing.
 
